--- a/README.adoc
+++ b/README.adoc
@@ -42,7 +42,7 @@ Synposis
 * Then execute the `main_playbook.yml` using the following command:
 
 ----
-ansible-playbook -i hosts main_playbook.yml
+ansible-playbook -i inventory main_playbook.yml
 ----
 
 There's a few default configuration values defined in `tasks/configure.yml` file, which you can modify as well depending on your needs.
